--- a/final_project_carine_hajjar.Rmd
+++ b/final_project_carine_hajjar.Rmd
@@ -61,8 +61,6 @@ In the extension, I will be addressing a plotting issue in Figure 1, adding sigm
 To begin, I will address the issue with Figure 1, which I describe above. I have actually already addressed it in the replication done above. Essentially, the regression result is not consisten with the outcome plotted in the graph. This could be an important addition to the findings in the paper - Republicans actually have a very slight aversion to cues from GOP leaders. This deepends the authors' findings that partisan identity may be more of a group identity rather than an ideological marker.
 
 ```{r, fig.height = 4, fig.width= 5, fig.align= "center"}
-
-data
 # We are looking to see the effect of different cues (liberal, conservative, and conservative from congress) on Republicans, Democrats, and Independents. 
 # Regression for average treatment effects of a conservative, liberal, and congression conservative cue among Republicans:
 # With each of the regressions, we see data filtered for Republicans:
@@ -149,9 +147,33 @@ I found one mistake - the cofficient for Republicans in Congress on the Republic
 # The hypothesis here states: Strong party affiliates that share party with the cue-giver are more likely to be party loyalists.
 # This model is the basis of the predictions and will help determine the causal effect of political cues on different levels of partisanship among DEMOCRATS. This model estimates support of policy based on race and the interaction between cues (conservative and liberal) and political ideology:
 model1 <- lm(Support ~ race_white + libtrump*pid7 + contrump*pid7, data = data[(data$contrump == 1 | data$self == 1 | data$libtrump == 1) & data$pid7 %in% c(1, 2, 3, 4),])
+
 # This data table serves as the control - the baseline for comparison. There is no cue in this data table:
 newdata = as.data.frame(cbind(rep(1, 4), rep(0, 4), rep(0, 4), seq(4, 7, 1)))
 colnames(newdata) <- c("race_white", "contrump", "libtrump", "pid7")
+# liberal cue as treatment on Republican partisans:
+newdata1 = as.data.frame(cbind(rep(1, 4), rep(1, 4), rep(0, 4), rep(0, 4), rep(1, 4), seq(4, 7, 1)))
+colnames(newdata1) <- c("race_white", "republican", "democrat", "contrump", "libtrump", "pid7")
+# Like above, these are the predictions for the control and for the treatment:
+plx0 <- predict(model1, newdata = newdata, type = "response", se = T)
+plx1 <- predict(model1, newdata = newdata1, type = "response", se = T)
+# Here we calculate the causal effect and the standard error:
+diff.lib <- plx1$fit - plx0$fit
+diff.lib.se <- sqrt(plx1$se.fit^2 + plx0$se.fit^2)
+# These are the upper and lower confidence intervals:
+upper.lib <- diff.lib + 1.96*diff.lib.se
+lower.lib <- diff.lib - 1.96*diff.lib.se
+# Here is the plot:
+#dev.new(width = 4.5, height = 7)
+plot(seq(4, 7, 1), diff.lib, ylim = c(-.25, .25), pch = 16, ylab = "Estimated Average Treatment Effect", xlab = "Levels of Partisan Affiliation", axes = F, main = "Liberal Trump Treatment")
+segments(x0 = c(seq(4, 7, 1), x1 = seq(4, 7, 1)), y0 = lower.lib, y1 = upper.lib, col = "#4286f480", lwd = 2)
+points(seq(4, 7, 1), diff.lib, pch = 16)
+abline(h = 0)
+# changed titles to match change in id
+axis(1, at = seq(4, 7, 1), labels = c("Independent", "Lean DEM", "Weak DEM", "Strong DEM"), cex.axis = .8)
+axis(2, at = seq(-.25, .45, .05), las = 2)
+box()
+
 #conservative treatment: The effect of a conservative cue on those who identify with a conservative party at different degrees (pid7 = 4-7)
 newdata1 = as.data.frame(cbind(rep(1, 4), rep(1, 4), rep(0, 4), seq(4, 7, 1)))
 colnames(newdata1) <- c("race_white", "contrump", "libtrump", "pid7")
@@ -178,28 +200,6 @@ abline(h = 0)
 # changed titles to match change in id
 axis(1, at = seq(4, 7, 1), labels = c("Independent", "Lean DEM", "Weak DEM", "Strong DEM"), cex.axis = .8)
 axis(2, at = seq(-.45, .25, .05), las = 2)
-box()
-# The same steps as above are repeated here, but using the liberal cue as treatment on Republican partisans:
-newdata1 = as.data.frame(cbind(rep(1, 4), rep(1, 4), rep(0, 4), rep(0, 4), rep(1, 4), seq(4, 7, 1)))
-colnames(newdata1) <- c("race_white", "republican", "democrat", "contrump", "libtrump", "pid7")
-# Like above, these are the predictions for the control and for the treatment:
-plx0 <- predict(model1, newdata = newdata, type = "response", se = T)
-plx1 <- predict(model1, newdata = newdata1, type = "response", se = T)
-# Here we calculate the causal effect and the standard error:
-diff.lib <- plx1$fit - plx0$fit
-diff.lib.se <- sqrt(plx1$se.fit^2 + plx0$se.fit^2)
-# These are the upper and lower confidence intervals:
-upper.lib <- diff.lib + 1.96*diff.lib.se
-lower.lib <- diff.lib - 1.96*diff.lib.se
-# Here is the plot:
-#dev.new(width = 4.5, height = 7)
-plot(seq(4, 7, 1), diff.lib, ylim = c(-.25, .25), pch = 16, ylab = "Estimated Average Treatment Effect", xlab = "Levels of Partisan Affiliation", axes = F, main = "Liberal Trump Treatment")
-segments(x0 = c(seq(4, 7, 1), x1 = seq(4, 7, 1)), y0 = lower.lib, y1 = upper.lib, col = "#4286f480", lwd = 2)
-points(seq(4, 7, 1), diff.lib, pch = 16)
-abline(h = 0)
-# changed titles to match change in id
-axis(1, at = seq(4, 7, 1), labels = c("Independent", "Lean DEM", "Weak DEM", "Strong DEM"), cex.axis = .8)
-axis(2, at = seq(-.25, .45, .05), las = 2)
 box()
 
 # NOTES: SHOWS HARDLY ANY EFFECT, CONSERVATIVE CUE HAS IMPACT ON STRONG LIB - MAKES MORE LIKELY TO VOTE LIB 
@@ -337,5 +337,9 @@ box()
 
 
 # Bibliography
-
+The Github repo for this milestone in online.^["https://github.com/carine-h/milestone_6"]
+Here is an in text citation for the paper I am replicating as well as its Dataverse data: @main-paper and @dataverse.
+Here is an in text citation for the stargazer package I use: @stargazer.
+I used this paper for supplementary information: @paper2.
+Finally, I use many techniques from our textbook: @RAOS.
 
